--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,15 +18,13 @@
             android:orientation="vertical"
             android:background="@android:color/transparent">
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/app_name"
-                android:textColor="@color/colorPrimary"
-                android:textSize="30dp"
-                android:layout_marginTop="24dp" />
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="50dp"
+                app:srcCompat="@drawable/mec_logo" />
 
             <EditText
                 android:id="@+id/displayname"
