--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,8 @@
                 android:id="@+id/done"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="None - congratulations! You're done for the day!"
+                android:layout_marginHorizontal="25dp"
+                android:text="None! You're done for the day."
                 android:visibility="gone"/>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -77,6 +78,7 @@
                 android:id="@+id/none"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
                 android:text="None yet!"
                 android:layout_marginVertical="20dp"
                 android:visibility="gone"/>
