--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0EAD69</color>
-    <color name="colorPrimaryLight">#3BCEAC</color>
-    <color name="colorPrimaryDark">#065533</color>
-    <color name="colorSecondary">#FFD23F</color>
-    <color name="colorAccent">#EE4266</color>
-    <color name="colorAccentDark">#540D6E</color>
-    <color name="blue">#44BBFF</color>
+    <color name="colorPrimary">#99ca3c</color>
+    <color name="colorPrimaryLight">#adf427</color>
+    <color name="colorPrimaryDark">#498d13</color>
+    <color name="colorSecondary">#006ba6</color>
+    <color name="colorAccent">#ffd918</color>
+    <color name="colorAccentDark">#d1a520</color>
+    <color name="blue">#58c3ff</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 </resources>
