--- a/app/src/main/res/layout/int_task_card.xml
+++ b/app/src/main/res/layout/int_task_card.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
 
     <androidx.cardview.widget.CardView
@@ -16,6 +18,7 @@
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:focusableInTouchMode="true"
+        android:focusable="true"
         >
 
 
@@ -23,7 +26,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="75"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
 
             <TextView
                 android:id="@+id/name"
@@ -72,7 +77,9 @@
 
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="20dp" />
+            android:layout_height="20dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"/>
 
     </androidx.cardview.widget.CardView>
 
